--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sassy Modal</title>
-    <meta name="description" content="Vanilla JS modal plugin.">
+    <title>Ctrl View</title>
+    <meta name="description" content="Vanilla JS plugin for toggle hide and show elements.">
 
     <link rel="stylesheet" href="./src/sass/main.scss">
     <script type="module" src="./src/index.js"></script>
